--- a/public/ourband.css
+++ b/public/ourband.css
@@ -1,343 +1,194 @@
-body {
+.everything {
     background: #464141;
     color: white;
     font-family: 'Kumbh Sans', Verdana, Geneva, Tahoma, sans-serif;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
 }
 
-.background-guitar {
-    position: absolute;
-    margin-top: -25em;
-    transform: rotate(10deg);
-    margin-left: 30em;
-    z-index: -1;
-}
-
-.three-columns a {
-    background: none;
-    display: inline;
-    color: blue;
-    padding: 0;
-}
-
-.three-columns {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 5%;
-}
-
-.header-h1 {
-    transform: rotate(-90deg);
-    margin-bottom: 250px;
-    font-size: 2em;
-}
-
-.name-column-one {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.information {
-    display: none;
-    margin-left: 100px;
-    margin-top: -175px;
-    padding: 10px;
-    border-radius: 5px;
-}
-
+.information,
 .information-right {
     display: none;
-    margin-left: 100px;
-    margin-top: -175px;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-.name-pete {
-    margin-left: 100px;
 }
 
 .name-kempa:hover .information {
-    position: absolute;
+    border-radius: 1em;
     display: block;
     border: 1px solid #D9D9D9;
     background: #D9D9D9;
     color: black;
-    width: 50%;
+    width: 75%;
 }
 
 .name-pete:hover .information {
-    position: absolute;
+    border-radius: 1em;
     display: block;
     border: 1px solid #B6CC38;
     background: #B6CC38;
     color: black;
-    width: 50%;
+    width: 75%;
 }
 
 .name-jesse:hover .information {
-    position: absolute;
+    border-radius: 1em;
     display: block;
     border: 1px solid #36B891;
     background: #36B891;
     color: black;
-    width: 50%;
+    width: 75%;
 }
 
 .whitney:hover .information-right {
-    position: absolute;
+    border-radius: 1em;
     display: block;
     border: 1px solid #00A4A4;
     background: #00A4A4;
     color: black;
-    
+    width: 75%;
 }
 
 .name-jeff:hover .information-right {
-    position: absolute;
+    border-radius: 1em;
     display: block;
     border: 1px solid #CBCACA;
     background: #CBCACA;
     color: black;
+    width: 75%;
 }
 
-.name-jesse {
-    margin-left: -100px;
-    margin-top: -40px;
-}
+@media screen and (min-width: 0px) and (max-width: 1024px)  { 
 
-.name-column-two {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 100px;
-    margin-right: 250px;
-}
-
-.name-jeff {
-    margin-left: -100px;
-}
-
-header .logo {
-    height: 118px;
-    margin-top: 1em;
-}
-
-@media screen and (max-width: 480px)  { 
-
-    html, body {
+    html {
         overflow-x: hidden;
         margin: 0;
         padding: 0;
     }
 
-    .name-column-two {
-        margin-top: 0em;
-        gap: 0;
-    }
-
-    .name-jeff {
-        margin-left: 2em;
-    }
-
-    .header .leftlinks {
-        display: none;
-    }
-
-    .header .rightlinks {
-        display: none;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        margin-left: 85px;
-        margin-top: 20px;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
-    }
-
-    .header-h1 {
-        transform: rotate(360deg);
-        font-size: 1em;
-        text-align: right;
-        margin-right: 2em;
-    }
-
-    .three-columns img {
-        height: 3em;
-    }
-
-    .whitney {
-        margin-left: 8em;
-    }
-
-    .whitney h2, .name-jeff h2 {
-        display: flex;
-        gap: 1em;
-    }
-
-    .whitney p, .name-jeff p {
-        margin-top: -2em;
-    }
-
-    .information-right p {
-        margin: 0;
-    }
-
     .background-guitar {
         display: none;
     }
 
+    h1 {
+        padding-bottom: .5em;
+    }
+
+    .footer {
+        margin-top: 15em;
+    }
+
+    .bottom-margin-p {
+        padding-bottom: 2em;
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    html {
+        overflow-x: hidden;
+    }
+
+    .name-kempa,
+    .name-pete,
+    .name-jesse,
+    .whitney,
+    .name-jeff {
+        position: absolute;
+    }
+
+    .footer {
+        margin-top: 54em;
+    }
+
     .name-kempa {
-        margin-left: 2em;
+        left: 30%;
+        top: 0%;
     }
 
     .name-pete {
-        margin-left: 8em;
+        left: 39%;
+        top: 13em;
     }
 
     .name-jesse {
-        margin-left: 2em;
+        left: 22em;
+        top: 23em;
     }
 
     .whitney {
-        margin-left: 8em;
-    }
-
-    .three-columns {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .name-column-one {
-        margin-top: -18em;
-        font-size: 1em;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: column;
-        height: 15em;
-        margin-top: 5em;
-        font-size: .8em;
-    }
-
-    .footer .rightfooter {
-        margin-left: 60%;
-    }
-
-    .footer .middlefooter {
-        margin-left: .5em;
-    }
-
-    .information:hover,
-    .information-right:hover {
-        display: none;
-    }
-
-}
-
-@media screen and (min-width: 480px) and (max-width: 1024px) {
-    
-    .topnav {
-        display: none;
-    }
-
-    .header .leftlinks {
-        display: flex;
-        align-items: center;
-        margin-left: -.5em;
-    }
-
-    .header .rightlinks {
-        display: flex;
-        align-items: center;
-        margin-right: 4em;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        display: flex;
-        margin-left: 1em;
-        align-items: center;
-    }
-
-    .header .leftlinks,
-    .header .rightlinks,
-    .header .middlelinks {
-        margin-top: 2em;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        height: 200px;
-        margin-top: 17em;
-        font-size: .8em;
-    }
-
-    .footer .middlefooter {
-        justify-content: center;
-        margin-bottom: 3.5em;
-    }
-
-    .footer .leftfooter,
-    .footer .middlefooter {
-        margin-top: 3em;
-    }
-
-    section {
-        display: none;
-    }
-
-    .background-guitar {
-        display: none;
-    }
-
-    .three-columns,
-    .name-column-one,
-    .name-column-two {
-        display: flex;
-        flex-direction: column;
-        margin-left: 10em;
-        width: 75%;
-        margin-top: 2em;
-    }
-
-    .name-column-two {
-        margin-top: 1.5em;
-    }
-
-    .header-h1 {
-        display: none;
-    }
-
-    .name-kempa {
-        margin-left: -6em;
+        left: 62em;
+        top: 7em;
     }
 
     .name-jeff {
-        margin-left: -9em;
+        top: 23em;
+        left: 58em;
+    }
+
+    h1 {
+        position: absolute;
+        transform: rotate(-90deg);
+        font-size: 3.5em !important;
+        top: 2em;
+    }
+
+    .name-jeff:hover .information-right {
+        position: absolute;
+        display: block;
+        border: 1px solid #CBCACA;
+        background: #CBCACA;
+        color: black;
+        width: 30em;
+        z-index: 1;
+        top: .5em;
+    }
+
+    .name-kempa:hover .information {
+        position: absolute;
+        display: block;
+        border: 1px solid #D9D9D9;
+        background: #D9D9D9;
+        color: black;
+        width: 30em;
+        z-index: 1;
+        top: .5em;
     }
     
+    .name-pete:hover .information {
+        position: absolute;
+        display: block;
+        border: 1px solid #B6CC38;
+        background: #B6CC38;
+        color: black;
+        width: 30em;
+        z-index: 1;
+        top: .5em;
+    }
+    
+    .name-jesse:hover .information {
+        position: absolute;
+        display: block;
+        border: 1px solid #36B891;
+        background: #36B891;
+        color: black;
+        width: 30em;
+        z-index: 1;
+        top: .5em;
+    }
+    
+    .whitney:hover .information-right {
+        position: absolute;
+        display: block;
+        border: 1px solid #00A4A4;
+        background: #00A4A4;
+        color: black;
+        width: 30em;
+        z-index: 1;
+        top: .5em;
+    }
+
+    .background-guitar {
+        position: absolute;
+        display: block;
+        margin-top: -40em;
+        transform: rotate(10deg);
+        margin-left: 35em;
+        z-index: 0;
+    }
 }
