--- a/views/forfans.ejs
+++ b/views/forfans.ejs
@@ -9,12 +9,15 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     </head>
-<body>
+<div class="everything">
     <%- include('partials/header') %>
+    <div class="row">
+        <div class="col-xs-12 content">
 
-    <p>We also offer personalized travel packages for music fans who want to see their favorite artists in different locations, provided with the same care and creativity that we apply to the artists’ tours. More information is coming soon, but <a class="click" href="/getintouch">click here</a> if you’re ready to pack your gear and get on the road to see your favorite band.</p>
+            <p>We also offer personalized travel packages for music fans who want to see their favorite artists in different locations, provided with the same care and creativity that we apply to the artists’ tours. More information is coming soon, but <a class="click" href="/getintouch">click here</a> if you’re ready to pack your gear and get on the road to see your favorite band.</p>
 
-
+        </div>
+    </div>
     <%- include('partials/footer') %>
-</body>
+</div>
 </html>
