--- a/views/getintouch.ejs
+++ b/views/getintouch.ejs
@@ -8,14 +8,20 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
-<body>
-    <%- include('partials/header') %>
-    
-    <h1>get in touch</h1>
+    <div class="everything">
+        <%- include('partials/header') %>
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>get in touch</h1>
 
-    <div class="touch" data-tf-live="01H6P8JS842RP2D80CBCKX9BQ4"></div><script src="//embed.typeform.com/next/embed.js"></script>
+            <div class="touch" data-tf-live="01H6P8JS842RP2D80CBCKX9BQ4"></div><script src="//embed.typeform.com/next/embed.js"></script>
 
+        </div>
+    </div>
     <%- include('partials/footer') %>
-</body>
+</div>
 </html>
