--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,24 +1,27 @@
 <head>
     <link rel="stylesheet" href="footer.css">
 </head>
-<footer class="footer">
-    <span class="drop-line"><a class="dropmail" href="mailto: jk@greenroom.travel" target="_blank">Drop us a line</a></span>
-    <span class="leftfooter">
-        <br><br>
-        <span>Green Room Travel GmbH</span>
-        <span>Puccinistraße 52</span>
-        <span>13088 Berlin, Germany</span>
-    </span>
-    <span class="middlefooter">
-        <span><a href="/impressum">Impressum</a></span>
-        <span><a href="/privacy">GDPR/Privacy Policy</a></span>
-    </span>
-    <span class="rightfooter">
-        <ul>
-            <li><a href="mailto: jk@greenroom.travel" target="_blank"><img src="/assets/envelope-png-115529532397xbb8ww6sc-removebg-preview.png"></img></a></li>
-            <li><a href="https://www.iata.org/" target="_blank"><img src="/assets/iata.png"></img></a></li>
-            <li><a href="https://www.securitymetrics.com/site_certificate?id=1905739&tk=1e11a71442ee63bf558a605f49a585d1" target="_blank"><img src="/assets/Credit_Card_Safe_corporate.png"></img></a></li>
-            <li><a href="https://www.instagram.com/greenroomtravel/" target="_blank"><img src="/assets/Instagram - Negative.png"></img></a></li>
-        </ul>
-    </span>
-</footer>
+<div class="container-fluid footer">
+    <div class="row text-center">
+        <button class="btn btn-lg dropmail-button"><a class="dropmail" href="mailto: jk@greenroom.travel" target="_blank">Drop us a line</a></button>
+    </div>
+    <div class="row">
+        <div class="col-xs-4 contents">
+            <span>Green Room Travel GmbH</span>
+            <span>Puccinistraße 52</span>
+            <span>13088 Berlin, Germany</span>
+        </div>
+        <div class="col-xs-4 contents text-center">
+            <span><a href="/impressum">Impressum</a></span>
+            <span><a href="/privacy">GDPR/Privacy Policy</a></span>
+        </div>
+        <div class="col-xs-4 list-group list-group-horizontal right-contents text-right">
+            <ul>
+                <li class="list-group-item"><a href="mailto: jk@greenroom.travel" target="_blank"><img src="/assets/envelope-png-115529532397xbb8ww6sc-removebg-preview.png"></img></a></li>
+                <li class="list-group-item"><a href="https://www.iata.org/" target="_blank"><img src="/assets/iata.png"></img></a></li>
+                <li class="list-group-item"><a href="https://www.securitymetrics.com/site_certificate?id=1905739&tk=1e11a71442ee63bf558a605f49a585d1" target="_blank"><img src="/assets/Credit_Card_Safe_corporate.png"></img></a></li>
+                <li class="list-group-item"><a href="https://www.instagram.com/greenroomtravel/" target="_blank"><img src="/assets/Instagram - Negative.png"></img></a></li>
+            </ul>
+        </div>
+    </div>
+</div>
