--- a/public/forfans.css
+++ b/public/forfans.css
@@ -1,4 +1,4 @@
-body {
+.everything {
     display: flex;
     flex-direction: column;
     background: #979797;
@@ -10,179 +10,55 @@ body {
 
 p {
     background: #464141;
-    width: 60%;
     text-align: center;
     display: flex;
     flex-direction: column;
-    margin-left: 18%;
     font-size: 1.8em;
     border-radius: 1em;
     padding: 1em;
 }
 
 .click {
-    display: flex;
-    width: 25%;
     padding: 10px;
-    justify-content: center;
-    margin-left: 310px;
     margin-top: 10px;
     margin-bottom: 10px;
     background: #B6CC38;
+    color: black;
 }
 
-header .logo {
-    height: 118px;
-    margin-top: 1em;
+.header {
+    margin-bottom: 2em;
 }
 
 .footer {
-    height: 180px;
+    width: 100%;
 }
 
-@media screen and (max-width: 480px)  {
-    body, html {
+@media screen and (max-width: 768)  {
+    html {
         margin: 0;
         padding: 0;
         overflow-x: hidden;
-        overflow-y: hidden;
-    }
-
-    .header .leftlinks {
-        display: none;
-    }
-
-    .header .rightlinks {
-        display: none;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        margin-left: 85px;
-        margin-top: 20px;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: column;
-        height: 100px;
-        margin-top: 3em;
-        font-size: .8em;
-    }
-
-    .footer .rightfooter {
-        margin-left: 60%;
-    }
-
-    .footer .middlefooter {
-        margin-left: .5em;
-    }
-
-    p {
-        font-size: 1.1em;
-        margin-left: 3.5em;
-        margin-top: 2em;
-    }
-
-    .footer .drop-line {
-        display: none;
-    }
-
-    .click {
-        width: 75%;
-        text-align: center;
-        display: block;
-        color: black;
-        padding: 10px;
-        margin-left: 20px;
-        background: #B6CC38;
     }
 }
 
 @media screen and (min-width: 480px) and (max-width: 1024px) {
-    
-    .topnav {
-        display: none;
+    .footer {
+        margin-top: 14em;
     }
 
-    .header .leftlinks {
-        display: flex;
-        align-items: center;
-        margin-left: -.5em;
+    .content {
+        margin-top: 8em;
     }
+}
 
-    .header .rightlinks {
-        display: flex;
-        align-items: center;
-        margin-right: 4em;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        display: flex;
-        margin-left: 1em;
-        align-items: center;
-    }
-
-    .header .leftlinks,
-    .header .rightlinks,
-    .header .middlelinks {
-        margin-top: 2em;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
+@media screen and (min-width: 1025px) {
+    .row .content {
+        width: 50%;
+        margin-left: 25%;
     }
 
     .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        height: 200px;
-        margin-top: 10em;
-        font-size: .8em;
-    }
-
-    .footer .middlefooter {
-        justify-content: center;
-        margin-bottom: 3.5em;
-    }
-
-    .footer .leftfooter,
-    .footer .middlefooter {
-        margin-top: 3em;
-    }
-
-    section {
-        display: none;
-    }
-
-    p {
-        font-size: 2em;
-        width: 75%;
-        margin-left: 2.2em;
         margin-top: 4em;
-        display: flex;
     }
-
-    .click {
-        text-align: center;
-        width: 50%;
-        margin-left: 4.5em;
-    }
-    
 }
