--- a/public/getintouch.css
+++ b/public/getintouch.css
@@ -1,161 +1,44 @@
-body {
-    display: flex;
-    flex-direction: column;
+.everything {
     background: #979797;
     color: white;
     font-family: 'Kumbh Sans', Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
 .touch {
-    margin-bottom: 5%;
-    margin-top: 3%;
-    margin-left: 15%;
-    width: 75%;
+    display: block;
+    margin-top: 2em;
+    margin-bottom: 5em;
+    padding-bottom: 4em;
 }
 
-h1 {
-    position: absolute;
-    font-size: 3em;
-    transform: rotate(-90deg);
-    top:5.5em;
-    left: -1em;
-    z-index: 1;
-}
-
-header .logo {
-    height: 118px;
-    margin-top: 1em;
-}
-
-.header {
-    border-bottom: solid 1px #B6CC38;
-}
-
-@media screen and (max-width: 480px)  {
-    body, html {
-        margin: 0;
-        padding: 0;
+@media screen and (max-width: 1024)  {
+    html {
         overflow-x: hidden;
-    }
-
-    h1 {
-        position:static;
-        font-size: 2em;
-        margin-left: 1em;
-        transform: rotate(0);
-    }
-
-    .header .leftlinks {
-        display: none;
-    }
-
-    .header .rightlinks {
-        display: none;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        margin-left: 85px;
-        margin-top: 20px;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: column;
-        height: 200px;
-        margin-top: 5em;
-        font-size: .8em;
-    }
-
-    .footer .rightfooter {
-        margin-left: 60%;
-    }
-
-    .footer .middlefooter {
-        margin-left: .5em;
     }
 }
 
 @media screen and (min-width: 480px) and (max-width: 1024px) {
-    
-    .topnav {
-        display: none;
-    }
-
-    .header .leftlinks {
-        display: flex;
-        align-items: center;
-        margin-left: -.5em;
-    }
-
-    .header .rightlinks {
-        display: flex;
-        align-items: center;
-        margin-right: 4em;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        display: flex;
-        margin-left: 1em;
-        align-items: center;
-    }
-
-    .header .leftlinks,
-    .header .rightlinks,
-    .header .middlelinks {
-        margin-top: 2em;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
-    }
-
     .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        height: 200px;
-        margin-top: 12.5em;
-        font-size: .8em;
-    }
-
-    .footer .middlefooter {
-        justify-content: center;
-        margin-bottom: 3.5em;
-    }
-
-    .footer .leftfooter,
-    .footer .middlefooter {
-        margin-top: 3em;
-    }
-
-    section {
-        display: none;
-    }
-
-    h1 {
-        display: none;
+        margin-top: 5em;
     }
 
     .touch {
-        margin-top: 10%;
+        padding-top: 3em;
     }
-    
+}
+
+@media screen and (min-width: 1025px) {
+    .touch {
+        width: 75%;
+        margin-left: 12.5%;
+        margin-top: 1em;
+    }
+
+    h1 {
+        transform: rotate(-90deg);
+        position: absolute;
+        top: 2.2em;
+        left: -1em;
+        font-size: 3.5em !important;
+    }
 }
