--- a/public/impressum.css
+++ b/public/impressum.css
@@ -1,4 +1,4 @@
-body {
+.everything {
     background: #464141;
     color: white;
     font-family: 'Kumbh Sans', Verdana, Geneva, Tahoma, sans-serif;
@@ -7,20 +7,6 @@ body {
 
 p, h1 {
     text-align: center;
-    margin-top: 50px;
-}
-
-article {
-     margin-bottom: 5%;
-}
-
-.privacy {
-    margin-top: 10px;
-}
-
-header .logo {
-    height: 118px;
-    margin-top: 1em;
 }
 
 @media screen and (max-width: 480px)  {
@@ -29,37 +15,19 @@ header .logo {
         margin: 0;
         padding: 0;
         overflow-x: hidden;
+        overflow-y: hidden;
         background: #464141;
     }
 
-    .header .leftlinks {
-        display: none;
-    }
-
-    .header .rightlinks {
-        display: none;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        margin-left: 85px;
-        margin-top: 20px;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
+    h1 {
+        padding-top: 1em;
     }
 
     .footer {
         display: flex;
         flex-direction: column;
         height: 15em;
-        margin-top: 5em;
+        margin-top: 10.5em;
         font-size: .8em;
     }
 
@@ -74,68 +42,12 @@ header .logo {
 
 @media screen and (min-width: 480px) and (max-width: 1024px) {
     
-    .topnav {
-        display: none;
-    }
-
-    .header .leftlinks {
-        display: flex;
-        align-items: center;
-        margin-left: -.5em;
-    }
-
-    .header .rightlinks {
-        display: flex;
-        align-items: center;
-        margin-right: 4em;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        display: flex;
-        margin-left: 1em;
-        align-items: center;
-    }
-
-    .header .leftlinks,
-    .header .rightlinks,
-    .header .middlelinks {
-        margin-top: 2em;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
+    article {
+        font-size: 1.5em;
+        margin-top: 4em;
     }
 
     .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        height: 200px;
-        margin-top: 8em;
-        font-size: .8em;
-    }
-
-    .footer .middlefooter {
-        justify-content: center;
-        margin-bottom: 3.5em;
-    }
-
-    .footer .leftfooter,
-    .footer .middlefooter {
-        margin-top: 3em;
-    }
-
-    section {
-        display: none;
-    }
-    
-    article {
-        font-size: 1.5em;
+        margin-top: 7em;
     }
 }
