--- a/public/privacy.css
+++ b/public/privacy.css
@@ -1,4 +1,4 @@
-body {
+.everything {
     background: #464141;
     color: white;
     font-family: 'Kumbh Sans', Verdana, Geneva, Tahoma, sans-serif;
@@ -7,8 +7,8 @@ body {
 }
 
 article {
-    width: 50%;
-    margin-left: 25%;
+    width: 75%;
+    margin-left: 12.5%;
 }
 
 .jeff {
@@ -20,126 +20,20 @@ article {
     margin-left: 85%;
 }
 
-header .logo {
-    height: 118px;
-    margin-top: 1em;
-}
+@media screen and (max-width: 1024px)  {
 
-@media screen and (max-width: 480px)  {
-
-    body, html {
+    html {
         margin: 0;
         padding: 0;
         overflow-x: hidden;
         background: #464141;
     }
 
-    .header .leftlinks {
-        display: none;
-    }
-
-    .header .rightlinks {
-        display: none;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        margin-left: 85px;
-        margin-top: 20px;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
-    }
-
     .footer {
         display: flex;
         flex-direction: column;
-        height: 15em;
         margin-top: 5em;
         font-size: .8em;
     }
-
-    .footer .rightfooter {
-        margin-left: 60%;
-    }
-
-    .footer .middlefooter {
-        margin-left: .5em;
-    }
-
-    ul {
-        text-align: center;
-        margin-left: -8em;
-    }
 }
 
-@media screen and (min-width: 480px) and (max-width: 1024px) {
-    
-    .topnav {
-        display: none;
-    }
-
-    .header .leftlinks {
-        display: flex;
-        align-items: center;
-        margin-left: -.5em;
-    }
-
-    .header .rightlinks {
-        display: flex;
-        align-items: center;
-        margin-right: 4em;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        display: flex;
-        margin-left: 1em;
-        align-items: center;
-    }
-
-    .header .leftlinks,
-    .header .rightlinks,
-    .header .middlelinks {
-        margin-top: 2em;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        height: 200px;
-        margin-top: 17em;
-        font-size: .8em;
-    }
-
-    .footer .middlefooter {
-        justify-content: center;
-        margin-bottom: 3.5em;
-    }
-
-    .footer .leftfooter,
-    .footer .middlefooter {
-        margin-top: 3em;
-    }
-
-    section {
-        display: none;
-    }
-    
-}
