--- a/public/realourservices.css
+++ b/public/realourservices.css
@@ -1,159 +1,91 @@
-body {
+.pattern {
     display: flex;
     flex-direction: column;
     background: #464141;
-    color: black;
+    color: white;
     font-family: 'Kumbh Sans', Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
     padding: 0;
 }
 
-h1 {
-    width: 40%;
-    font-size: 1.2em;
-    text-align: center;
-    margin: auto;
-    margin-top: 2em;
-    background: white;
-    padding: 1.5em;
-    border-radius: 1em;
-    font-weight: 300;
-    padding-bottom: 2.5em;
-    box-shadow: 0px 2px 10px 1px darkslategray;
+.information {
+    display: none;
 }
 
-.all-experience {
-    margin-left: 4em;
-}
-
-.sideways {
-    font-size: 3.5em;
+.accomodation-ellipse:hover .information {
     position: absolute;
-    transform: rotate(90deg);
-    color: white;
-    left: 22em;
-    top: 3.5em;
+    display: block;
+    background: white;
+    color: black;
+    padding: 1em;
+    border-radius: 1em;
+    width: 100%;
+}
+
+.transportation-ellipse:hover .information {
+    position: absolute;
+    display: block;
+    background: white;
+    color: black;
+    padding: 1em;
+    border-radius: 1em;
+    width: 100%;
+}
+
+.support-ellipse:hover .information {
+    position: absolute;
+    display: block;
+    background: white;
+    color: black;
+    padding: 1em;
+    border-radius: 1em;
+    width: 100%;
+}
+
+.advice-ellipse:hover .information {
+    position: absolute;
+    display: block;
+    background: white;
+    color: black;
+    padding: 1em;
+    border-radius: 1em;
+    width: 100%;
+}
+
+.experiences-ellipse:hover .information {
+    position: absolute;
+    display: block;
+    background: white;
+    color: black;
+    padding: 1em;
+    border-radius: 1em;
+    width: 100%;
 }
 
 .ourservicesguitar {
     position: absolute;
     z-index: -1;
-    margin-left: -14.7em;
+    margin-left: -17em;
     top: 8em;
 }
 
-.accomodations,
-.transportation,
-.support,
-.experiences,
-.advice {
-    background: white;
-    width: 15%;
-    padding: 3.7em;
-    border-radius: 15em;
-    font-size: .7em;
+.h3 {
+    width: 90%;
+    left: 30.5%;
+    top: 8em;
+    background: #D9D9D9;
     box-shadow: 0px 2px 10px 1px darkslategray;
+    padding: 1em;
+    border-radius: 2em;
 }
 
-.accomodations h3,
-.transportation h3,
-.support h3,
-.experiences h3,
-.advice h3 {
-    text-align: center;
+.text-center h1 {
+    color: black;
+    font-weight: 100;
+    font-size: 1.5em;
 }
 
-.h1-rectangle {
-    position: absolute;
-    width: 650px;
-    height: 220px;
-    left: 395px;
-    top: 4490px;
-    background: #00A4A4;
-    border-radius: 25px;
-    z-index: -1;
-    margin-top: -270em;
-}
-
-.bothsides {
-    margin-left: 12em;
-    margin-top: 2em;
-}
-
-.transportation {
-    margin-left: 10em;
-    margin-top: 4em;
-}
-
-.transportation-circle {
-    position: absolute;
-    z-index: -1;
-    width: 20em;
-    margin-left: 3.5em;
-    margin-top: 3.5em;
-}
-
-.support {
-    position: absolute;
-    margin-left: 40em;
-    margin-top: -50em;
-}
-
-.support-circle {
-    position: absolute;
-    margin-left: 29em;
-    margin-top: -33em;
-    width: 19em;
-}
-
-.experiences {
-    position: absolute;
-    margin-left: 73em;
-    margin-top: -30em;
-    width: 13%;
-}
-
-.experiences-circle {
-    position: absolute;
-    z-index: -1;
-    margin-left: 52em;
-    margin-top: -24em;
-}
-
-.advice-circle {
-    position: absolute;
-    z-index: -1;
-    margin-left: 33em;
-    margin-top: -13em;
-    height: 17em;
-    width: 18em;
-}
-
-.advice {
-    position: absolute;
-    margin-left: 50em;
-    margin-top: -15em;
-    width: 13%;
-}
-
-.accomodation-circle {
-    position: absolute;
-    z-index: -1;
-    width: 19em;
-    margin-left: -2em;
-}
-
-header .logo {
-    height: 118px;
-    margin-top: 1em;
-}
-
-.footer {
-    margin-top: 10em;
-    color: white;
-}
-
-@media screen and (max-width: 480px)  {
+@media screen and (max-width: 1024px)  {
 
     body, html {
         margin: 0;
@@ -162,245 +94,164 @@ header .logo {
         background: #464141;
     }
 
-    .header .leftlinks {
+    .accomodation-circle,
+    .advice-circle,
+    .experiences-circle,
+    .support-circle,
+    .transportation-circle,
+    .h1-rectangle {
         display: none;
-    }
-
-    .header .rightlinks {
-        display: none;
-    }
-
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        margin-left: 85px;
-        margin-top: 20px;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
     }
 
     .ourservicesguitar {
         display: none;
     }
 
-    .h1-rectangle, .accomodation-circle, .transportation-circle, .support-circle, .experiences-circle, .advice-circle {
-        display: none;
-    }
-
-    .sideways {
-        font-size: 2em;
-        transform: rotate(-360deg);
-        color: white;
-        left: 1em;
-        top: 5.5em;
+    .services {
+        margin-left: 1em;
     }
 
     h1 {
-        width: 80%;
-        font-size: .8em;
-        text-align: center;
-        margin-top: 4em;
-        background: white;
-        padding: 1.5em;
-        border-radius: 1em;
-        font-weight: 300;
-        padding-bottom: 2.5em;
-        box-shadow: 0px 2px 10px 1px #B6CC38;
+        width: 90%;
     }
 
-    .accomodations {
-        width: 75%;
-        text-align: center;
-        margin-left: -15em;
-        box-shadow: 0px 1px 1px 1px black;
-    }
-
-    .transportation {
-        width: 75%;
-        text-align: center;
-        margin-left: -5em; 
-        box-shadow: 0px 1px 1px 1px black;
-    }
-
-    .advice, .experiences, .support {
-        position: relative;
-        width: 75%;
-    }
-
-    .right {
-        margin: 0;
-    }
-
-    .support {
-        margin-left: -15em;
-        margin-top: 5em;
-        box-shadow: 0px 1px 1px 1px black;
-    }
-
-    .experiences {
-        margin-left: -13.25em;
-        margin-top: 5em; 
-        box-shadow: 0px 1px 1px 1px black;
-    }
-
-    .advice {
-        margin-left: -5em;
-        margin-top: 5em;
-        box-shadow: 0px 1px 1px 1px black;
+    .center-block {
+        padding-bottom: 1em;
+        padding-top: .5em;
     }
 
     .footer {
-        display: flex;
-        flex-direction: column;
-        height: 200px;
-        margin-top: 5em;
-        font-size: .8em;
+        margin-top: 12em;
     }
 
-    .footer .rightfooter {
-        margin-left: 60%;
+    .information {
+        position: absolute;
     }
 
-    .footer .middlefooter {
-        margin-left: .5em;
+    .information-advice {
+        top: 110em;
     }
 
-    .accomodations,
-    .transportation,
-    .support,
-    .experiences,
-    .advice {
-        background-color:white;
-        color: black;
-        width:80%;
+    .information-experiences {
+        top: 90em;
     }
 
-    h1 {
-        background-color:white;
-        box-shadow: 0px 1px 1px 1px black;
+    .information-support {
+        top: 72em;
+    }
+
+    .information-transportation {
+        top: 52em;
+    }
+
+    .information-accomodation {
+        top:32em;
     }
 
 } 
 
-@media screen and (min-width: 480px) and (max-width: 1024px) {
-    
-    .topnav {
-        display: none;
+@media screen and (min-width: 1025px) {
+
+    .services {
+        transform: rotate(90deg);
+        position: absolute;
+        left: 25em;
+        top: 5em;
+        font-size: 3.5em !important;
     }
 
-    .header .leftlinks {
-        display: flex;
-        align-items: center;
-        margin-left: -.5em;
+    .h3 {
+        position: absolute;
+        width: 40%;
+        left: 20.5em;
+        top: 8em;
+        background: #D9D9D9;
+        box-shadow: 0px 2px 10px 1px darkslategray;
+        padding: 2em;
+        border-radius: 2em;
     }
 
-    .header .rightlinks {
-        display: flex;
-        align-items: center;
-        margin-right: 4em;
+    .h1-rectangle {
+        width: 45%;
+        border-radius: 4em;
+        display: block;
+        margin: auto;
+        top: 13em;
+        left: 28em;
+        z-index: -1;
+        position: absolute;
     }
 
-    .header {
-        height: 200px;
-    }
-
-    .header .middlelinks {
-        display: flex;
-        margin-left: 1em;
-        align-items: center;
-    }
-
-    .header .leftlinks,
-    .header .rightlinks,
-    .header .middlelinks {
-        margin-top: 2em;
-    }
-
-    .header .logo {
-        height: 130px;
-        width: 170px;
-        padding: 0;
+    .accomodation-circle,
+    .accomodation-ellipse,
+    .advice-circle,
+    .advice-ellipse,
+    .experiences-circle,
+    .experiences-ellipse,
+    .support-circle,
+    .support-ellipse,
+    .transportation-circle,
+    .transportation-ellipse {
+        position: absolute;
     }
 
     .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        height: 200px;
-        margin-top: 5em;
-        font-size: .8em;
+        margin-top: 80em;
     }
 
-    .footer .middlefooter {
-        justify-content: center;
-        margin-bottom: 3.5em;
+    .accomodation-circle {
+        left: 9em;
+        top: 29em;
     }
 
-    .footer .leftfooter,
-    .footer .middlefooter {
-        margin-top: 3em;
+    .accomodation-ellipse {
+        left: 11em;
+        top: 29.5em;
     }
 
-    section {
-        display: none;
+    .transportation-circle {
+        left: 22em;
+        top: 50em;
     }
 
-    .ourservicesguitar {
-        display: none;
+    .transportation-ellipse {
+        left: 25em;
+        top: 50em;
     }
 
-    .sideways {
-        display: none;
+    .support-circle {
+        left: 50em;
+        top: 35em;
     }
 
-    .bothsides {
-        display: flex;
-        flex-direction: column;
-        gap: 2em;
+    .support-ellipse {
+        left: 49em;
+        top: 33em;
     }
 
-    .accomodations,
-    .transportation,
-    .support,
-    .experiences,
-    .advice {
-        margin: 0;
-        width: 50%;
-        position: relative;
+    .advice-circle {
+        left: 53em;
+        top: 55em;
     }
 
-    .right {
-        display: flex;
-        flex-direction: column;
-        gap: 2em;
+    .advice-ellipse {
+        left: 55em;
+        top: 58em;
     }
 
-    h1 {
-        width: 75%;
+    .experiences-circle {
+        left: 78em;
+        top: 40em;
     }
 
-    .accomodations {
-        margin-bottom: 2em;
+    .experiences-ellipse {
+        left: 76em;
+        top: 43em;
     }
 
-    .advice,
-    .support,
-    .accomodations {
-        margin-left: 0em;
+    .information {
+        z-index: 1 !important;
+        position: absolute;
+        top: 2em;
     }
-
-    .transportation {
-        margin-left: 5em;
-    }
-
-    .h1-rectangle, .accomodation-circle, .transportation-circle, .support-circle, .experiences-circle, .advice-circle {
-        display: none;
-    }
-    
 }
